# zeno-agent

./: Zeno Agent.spec  main.py  pyproject.toml
core/agent/: __init__.py  agent.py  middlewares.py  prompt.py
core/agent/models/: __init__.py  google.py
core/configs/: app_storage.py
core/logger/: __init__.py
core/models/: __init__.py  config.py  message.py
core/settings/: __init__.py  model.py  setting.py
ui/: __init__.py
ui/components/: navbar.py
ui/pages/: ___init___.py  home.py
