[project]
name = "zeno-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain[google-genai]>=1.2.15",
    "langchain-openai>=1.1.14",
    "loguru>=0.7.3",
    "langchain-core>=1.3.0",
    "pydantic>=2.13.2",
    "nicegui>=3.10.0",
    "pyinstaller>=6.19.0",
    "pywebview>=6.2.1",
    "nuitka>=4.0.8",
    "platformdirs>=4.9.6",
]
